# mcp-devonthink

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  TOOL-LIST.txt  open-issues.md  pyproject.toml  requirements.txt
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_link-tool-baseline.json  0002_link-tool-baseline-v2.json
.github/workflows/: catalog-smoke.yml
app/: config.py  server.py
app/base/: api_client.py  base_prompt.py  base_tool.py  result_types.py
app/data/: devonthink_command_specs.json
app/tools/: __init__.py  applescript_counter.py  devonthink_annotation_tools.py  devonthink_link_tools.py  (+10 more)
benchmarks/: applescript_perf_baseline_DT4.1.1_20260423T145150.json  applescript_perf_baseline_DT4.1.1_20260423T222732.json
catalog-runtime/: README.md
clients/: README.md  claude-code.txt  codex.config.toml  vscode.mcp.json
docs/: client-setup-claude-code.md  client-setup-codex.md  client-setup-hermes-agent.md  client-setup-openclaw.md  client-setup-vscode.md  devonthink-applescript-integration.md
scripts/: audit_tool_observability.py  benchmark_applescript.sh  build_tool_catalog.py  install-connectors.sh  lint_tool_catalog.py  live_test_link_perf.py  manage_connectors.py  stress_test_tools.py
tests/: conftest.py  test_annotation_tools.py  test_database_tools.py  test_dictionary_tool_generation.py  test_link_format_helpers.py  test_record_metadata_tools.py  test_reminder_tools.py  test_richtext_tools.py  test_scholar_corpus.py  test_scholar_workflows.py  test_script_tools.py  test_smart_tools.py  test_validation_and_pagination.py
(+15 files in other folders)
